# lab-resources

./: .gitignore  .pre-commit-config.yaml  Pipfile  README.md  SECURITY-INSIGHTS.yml  TODO  Taskfile.yml  main.py  pyproject.toml  setup.cfg
.github/etc/: dictionary.txt
.github/workflows/: commit.yml  release.yml  update.yml
ansible/jonzeolla/labs/: README.md  galaxy.yml
ansible/jonzeolla/labs/roles/cloud9/defaults/: main.yml
ansible/jonzeolla/labs/roles/cloud9/files/: check-disk.sh  check-partition.sh  resize-disk.sh
ansible/jonzeolla/labs/roles/cloud9/tasks/: main.yml
ansible/jonzeolla/labs/roles/docker-compose/tasks/: main.yml
ansible/jonzeolla/labs/roles/docker/tasks/: main.yml
ansible/jonzeolla/labs/roles/docker_compose/tasks/: main.yml
ansible/jonzeolla/labs/roles/docker_registry/files/: Dockerfile
ansible/jonzeolla/labs/roles/docker_registry/tasks/: main.yml
ansible/jonzeolla/labs/roles/gitlab/defaults/: main.yml  vars.yml
ansible/jonzeolla/labs/roles/gitlab/files/: docker-compose.yml  gitlab.yml
ansible/jonzeolla/labs/roles/gitlab/tasks/: main.yml
ansible/jonzeolla/labs/roles/gitlab/vars/: vars.yml
ansible/jonzeolla/labs/roles/gitlab_runner/defaults/: main.yml
ansible/jonzeolla/labs/roles/gitlab_runner/files/: runner.yml
ansible/jonzeolla/labs/roles/gitlab_runner/tasks/: main.yml
ansible/jonzeolla/labs/roles/homebrew/tasks/: main.yml
hack/: update-demo-repos.py
