[bumpversion]
current_version = 0.0.0
commit = True
tag = True

[metadata]
author = "Jon Zeolla"
description = "Reusable lab resources"
description-file = "README.md"
versioning = "SemVer"
license_file = "LICENSE"
name = "lab-resources"
url = "https://github.com/JonZeolla/lab-resources"

[bumpversion:file:ansible/jonzeolla/labs/galaxy.yml]

[bumpversion:file:VERSION]
