[bumpversion]
current_version = 1.0.1
commit = True
tag = True

[metadata]
author = "Jon Zeolla"
description = "Reusable lab resources"
description-file = "README.md"
versioning = "SemVer"
license_file = "LICENSE"
name = "lab-resources"
url = "https://github.com/JonZeolla/lab-resources"

[bumpversion:file:SECURITY-INSIGHTS.yml]

[bumpversion:file:VERSION]

[bumpversion:file:ansible/jonzeolla/labs/galaxy.yml]
